Fixes 749297 - truncates the username line with ellipsis when it's too large

--- a/site/app/stylesheets/partials/_page.scss
+++ b/site/app/stylesheets/partials/_page.scss
@@ -255,6 +255,10 @@ header.universal {
         font-size: .9em;
         text-decoration: none;
         cursor: pointer;
+        white-space: nowrap;
+        max-width: 19em;
+        overflow: hidden;
+        text-overflow: ellipsis;
         @include transition-duration(.5s);
       }
     
